@@ -1346,9 +1346,32 @@ SCIP_RETCODE SCIPeventProcess(
       break;
 
    case SCIP_EVENTTYPE_GLBCHANGED:
+      var = event->data.eventbdchg.var;
+      assert(var != NULL);
+
+      /* inform LP about global bound change */
+      if( SCIPvarGetStatus(var) == SCIP_VARSTATUS_COLUMN || SCIPvarGetStatus(var) == SCIP_VARSTATUS_LOOSE )
+      {
+         assert(SCIPvarGetProbindex(var) >= 0);
+         SCIP_CALL( SCIPlpUpdateVarLbGloabl(lp, set, var, event->data.eventbdchg.oldbound,
+               event->data.eventbdchg.newbound) );
+      }
+
+      /* process variable's event filter */
+      SCIP_CALL( SCIPeventfilterProcess(var->eventfilter, set, event) );
+      break;
+
    case SCIP_EVENTTYPE_GUBCHANGED:
       var = event->data.eventbdchg.var;
       assert(var != NULL);
+
+      /* inform LP about global bound change */
+      if( SCIPvarGetStatus(var) == SCIP_VARSTATUS_COLUMN || SCIPvarGetStatus(var) == SCIP_VARSTATUS_LOOSE )
+      {
+         assert(SCIPvarGetProbindex(var) >= 0);
+         SCIP_CALL( SCIPlpUpdateVarUbGloabl(lp, set, var, event->data.eventbdchg.oldbound,
+               event->data.eventbdchg.newbound) );
+      }
 
       /* process variable's event filter */
       SCIP_CALL( SCIPeventfilterProcess(var->eventfilter, set, event) );
